<resources>
    <string name="app_name">NFC Tag Scanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_scan_nfc">Scan NFC Tag</string>
    <string name="instructions_scan_nfc">Please scan an NFC tag to see its details.</string>
    <string name="tag_id_label">Tag ID:</string>
    <string name="name_label">Name:</string>
    <string name="parent_label">Parent:</string>
    <string name="children_label">Children</string>
    <string name="image_label">Image:</string>
    <string name="na">N/A</string>
    <string name="assign_button">Scan</string>
    <string name="title_entities">Entities</string>
    <string name="name_hint">Input name</string>
    <string name="parent_hint">None</string>
    <string name="select_parent_button">Select</string>
    <string name="assign_to_parent_tag">Assign to parent tag</string>
    <string name="tag_label">Tag</string>
</resources>