<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/title_scan_nfc"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <!-- Instructions -->
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="32dp"
            android:text="@string/instructions_scan_nfc"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_home_entity_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        >


        <!-- Entity info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/name_view"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_marginEnd="0dp"
                    android:autofillHints="name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_medium" />


                <Button
                    android:id="@+id/fragment_home_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_marginEnd="0dp"
                    android:text="Delete"
                    android:layout_gravity="end"
                    >

                </Button>
            </LinearLayout>

            <!-- Parent Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/parent_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_label"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/parent_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="0dp"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/delete_parent_button"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_marginEnd="0dp"
                    android:layout_marginVertical="0dp"
                    android:padding="0dp"
                    android:text="x">

                </Button>
            </LinearLayout>

            <!-- Tag Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_label"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tag_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="0dp"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/asign_tag_button"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_marginVertical="0dp"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_marginEnd="0dp"
                    android:padding="0dp"
                    android:text="Reasign">

                </Button>
            </LinearLayout>


            <!--
            <ImageView
                android:id="@+id/tag_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_label"
                android:visibility="gone" />
            -->
        </LinearLayout>

        <!-- Entity children -->
        <LinearLayout
                android:id="@+id/fragment_home_children_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/children_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/children_label"

                    android:textSize="@dimen/text_size_medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_home_children_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout> <!-- entity children -->
    </LinearLayout> <!-- Entity group -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/assign_to_parent_tag" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/assign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:enabled="false"
            android:padding="@dimen/padding_medium"
            android:text="@string/assign_button" />

        <Button
            android:id="@+id/select_parent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:enabled="false"
            android:padding="@dimen/padding_medium"
            android:text="@string/select_parent_button"
        />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>