<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action
        android:id="@+id/action_navigation_home_with_tag_uid"
        app:destination="@id/navigation_home">
        <argument
            android:name="tag_uid"
            app:argType="string"/>
    </action>

    <action
        android:id="@+id/action_navigation_home_with_entity_id"
        app:destination="@id/navigation_home">
        <argument
            android:name="entity_id"
            app:argType="integer"/>
    </action>

    <fragment
        android:id="@+id/navigation_home"
        android:name="dk.sierrasoftware.nfcscanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="tag_uid"
            app:argType="string"
            android:defaultValue="" />
            <!-- app:nullable="true" -->
        <argument
            android:name="entity_id"
            app:argType="integer"
            android:defaultValue="0" />
            <!-- app:nullable="true" -->
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard">
            <!--
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            -->
            <argument
                android:name="task" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dk.sierrasoftware.nfcscanner.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <argument
            android:name="task"
            app:argType="string"
            android:defaultValue="NONE" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dk.sierrasoftware.nfcscanner.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
    </fragment>
</navigation>